# urzad-regulacji-energetyki

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  PROJECT_STRUCTURE.md  README.md  TOOL_CONFIGURATION.md  mkdocs.yml  pyproject.toml  setup_dev_macos.sh  tox.ini
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: contributing.md  index.md  integracja.txt  license.md  scraping_strategy.md
docs/api/: biuletyn.md  mioze.md  taryfy.md
docs/development/: structure.md  tools.md
docs/guide/: installation.md  quickstart.md
docs/modules/: biuletyn.md  mioze.md  taryfy.md
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/api/biuletyn/: index.html
latest/api/mioze/: index.html
latest/api/taryfy/: index.html
latest/contributing/: index.html
latest/development/structure/: index.html
latest/development/tools/: index.html
latest/guide/installation/: index.html
latest/guide/quickstart/: index.html
latest/license/: index.html
latest/modules/biuletyn/: index.html
latest/modules/mioze/: index.html
latest/modules/taryfy/: index.html
latest/scraping_strategy/: index.html
latest/search/: search_index.json
main/: 404.html  index.html  sitemap.xml
main/api/biuletyn/: index.html
main/api/mioze/: index.html
main/api/taryfy/: index.html
main/contributing/: index.html
main/development/structure/: index.html
main/development/tools/: index.html
main/guide/installation/: index.html
main/guide/quickstart/: index.html
main/license/: index.html
main/modules/biuletyn/: index.html
main/modules/mioze/: index.html
main/modules/taryfy/: index.html
main/scraping_strategy/: index.html
main/search/: search_index.json
scripts/bash/: setup_dev_macos.sh  verify_config.sh
src/python_library_template/: __init__.py  core.py
tests/: conftest.py
tests/integration/: __init__.py  test_full_workflow.py
tests/unit/: __init__.py  test_core.py
tests/unit/test_biuletyn_informacji_publicznej_changelog/: __init__.py  test_analyzer.py  test_models.py
tests/unit/test_rejestr_mioze/: __init__.py  test_models.py  test_registry.py
tests/unit/test_taryfy_i_inne_decyzje_energia_elektryczna/: __init__.py  test_analyzer.py  test_models.py
